Fix top-menu missing background when expanded

--- a/MP2Web/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/MP2Web/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -1,6 +1,6 @@
 .main-nav {
   padding: 0px;
-  height: 50px;
+  min-height: 50px;
 }
 
 .navbar-brand img {
